shifted some things around, cleaned up, fixed background problem

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
+/* Styles for site */
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Righteous", cursive;
+  background: url("./images/blackjack.jpg");
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.heading {
+  text-align: center;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: bold;
+  font-size: 40px;
+  background-color: black;
+  width: 36rem;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.start {
+  display: inline;
+  background: black;
+  color: white;
+  border: none;
+  padding: 20px 40px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 20px;
+  font-family: inherit;
 }
